# docs/swagger.json
@@ -11,29 +11,21 @@
     "paths": {
         "/cars": {
             "get": {
-                "description": "Get all cars",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Deleting a specific car",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "cars"
                 ],
-                "summary": "Get all cars",
+                "summary": "Delete car by id",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Limit param",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Offset param",
-                        "name": "offset",
-                        "in": "query"
+                        "description": "Deleting car id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -53,6 +45,42 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/transport.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/transport.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/cars/photo/{fileId}": {
+            "get": {
+                "description": "Get car avatar by fileId from S3",
+                "produces": [
+                    "image/png",
+                    " image/jpeg"
+                ],
+                "tags": [
+                    "cars"
+                ],
+                "summary": "Get car avatar",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID файла",
+                        "name": "fileId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
                         }
                     },
                     "500": {
