# internal/transport/handler.go
@@ -2,6 +2,7 @@ package transport
 
 import (
 	"github.com/bwjson/api/internal/service"
+	"github.com/bwjson/api/pkg"
 	"github.com/gin-gonic/gin"
 	"github.com/swaggo/files"
 	"github.com/swaggo/gin-swagger"
@@ -9,10 +10,11 @@ import (
 
 type Handler struct {
 	services *service.Services
+	s3       *pkg.S3Client
 }
 
-func NewHandler(services *service.Services) *Handler {
-	return &Handler{services: services}
+func NewHandler(services *service.Services, s3 *pkg.S3Client) *Handler {
+	return &Handler{services: services, s3: s3}
 }
 
 func (h *Handler) InitRoutes() *gin.Engine {
@@ -25,9 +27,10 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		// r.Use(AuthMiddleware)
 		cars.POST("/", h.Create)
 		cars.GET("/", h.GetAll)
-		cars.GET("/{id}", h.GetById)
-		cars.PATCH("/{id}", h.UpdateById)
-		cars.DELETE("/{id}", h.DeleteById)
+		cars.GET("/:id", h.GetById)
+		cars.PATCH("/:id", h.UpdateById)
+		cars.DELETE("/:id", h.DeleteById)
+		cars.GET("/photo/:file_id", h.GetAvatar)
 	}
 
 	return r
